<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/sender_settings_menuitem"
        android:icon="@android:drawable/ic_menu_preferences"
        android:onClick="openSenderSettings"
        android:showAsAction="always"
        android:title="@string/sender_settings_menuitem"/>
    <item
        android:id="@+id/copy_db_menuitem"
        android:icon="@android:drawable/ic_menu_save"
        android:onClick="copyDBtoSD"
        android:showAsAction="always"
        android:title="@string/copy_db_menuitem"/>
    <item
        android:id="@+id/statistics_menuitem"
        android:icon="@android:drawable/ic_menu_info_details"
        android:onClick="showStatistics"
        android:showAsAction="always"
        android:title="@string/statistics_menuitem"/>
    <item
        android:id="@+id/create_shortcut"
        android:icon="@android:drawable/ic_menu_directions"
        android:onClick="showStatistics"
        android:showAsAction="always"
        android:title="@string/create_shortcut"/>
    <item
        android:id="@+id/remove_shortcut"
        android:icon="@android:drawable/ic_menu_directions"
        android:onClick="showStatistics"
        android:showAsAction="always"
        android:title="@string/remove_shortcut"/>

</menu>